Changelog for Touchdown
=======================

0.9.1 (unreleased)
------------------

- Add support for S3 bucket acceleration.

- Add support for standing up standalone EC2 instances (outside of an ASG).

- Ensure ElastiCache replication group knows its max name length.

- Allow a load balancer to be used as CustomOrigin.

We are now only testing with paramiko 2.0.0 and later. This has dropped
pycrypto in favour of cryptograph (which we already depend on).


0.9.0 (2016-04-19)
------------------

- Touchdown can now manage allocation of parts of a network range through the
  `ip_network` type::

      network = config.add_ip_network(
          name='subnets',
          network='10.41.0.0/20',
      )

      app_serves = network.add_ip_allocation(
          name='app_servers',
          size='25',
      )

  This would allocate the first available `/25` in `10.41.0.0/20`.

- Add support for using the `tail` command against CloudFront distributions.


0.8.0 (2016-03-15)
------------------

- Add support for AWS Lambda security groups and subnets.

- Support propagating tags for autoscaling groups and removing tags from ASG's.

- Fix SSH on newer versions of ubuntu.

- You can now set `evaluate_target_health` on a route53 alias target.

- Support for an 'empty' serializer. Mostly when a field isn't set it shouldn't
  have a value when serialized. CloudFront is an exception.

Touchdown now requires botocore 1.3.26 or higher.


0.7.4 (2016-02-09)
------------------

- Fix problems creating and copying AMI's

This release is tested with botocore 1.3.24.


0.7.3 (2016-02-08)
------------------

- Better diff rendering behaviour when a resource list has an item removed.


0.7.2 (2016-02-05)
------------------

- Fix typo in error message.

- Fix formatting error when diffing JSON payloads (such as for a `user_data`
  attribute on a launch config). In this case the direction of the change could
  be incorrect. (The actual change would be correct, however).

